# Algorithmic-Design

./: README.md
homeworks/: README.md
homeworks/homework_1/: CMakeLists.txt  README.md  main.c  matrix.c  matrix.h  padding.h  plot.py  rectangular.h  strassen.c
homeworks/homework_1/data/: out.txt  plot.py
homeworks/homework_1/include/: strassen.h  test.h
homeworks/homework_1/report/: report.tex
homeworks/homework_1/src/: main.c  padding.c  rectangular.c  test.c
homeworks/homework_2/: CMakeLists.txt  Makefile  README.md  a.out  heap_test.c  insertion_time.txt  main.c
homeworks/homework_2/include/: binheap.h
homeworks/homework_2/report/: report.aux  report.tex
homeworks/homework_2/result/: insertion_time.txt  plot.gp
homeworks/homework_2/src/: binheap.c  main.c
homeworks/homework_3/: CMakeLists.txt  Makefile  README.md  main.c
homeworks/homework_3/include/: binheap.h
homeworks/homework_3/report/: report.tex
homeworks/homework_3/src/: binheap.c  main.c
homeworks/homework_4/: Makefile  README.md
homeworks/homework_4/include/: binheap.h  heap_sort.h  quick_sort.h
homeworks/homework_4/report/: report.tex
homeworks/homework_4/src/: binheap.c  bubble_sort.c  insertion_sort.c  main.c  quick_sort.c  selection_sort.c
homeworks/homework_5/: Makefile  README.md
homeworks/homework_5/include/: quick_sort.h  select.h  total_order.h
homeworks/homework_5/report/: report.tex
homeworks/homework_5/src/: heap_sort.c  insertion_sort.c  main.c  quick_sort.c  select.c  swap.c
homeworks/homework_6/: CMakeLists.txt  README.md
(+12 files in other folders)
